--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,50 @@
+# Mac OS X
 .DS_Store
-/.build
-/Packages
+
+# Xcode
+
+## Build generated
+build/
+DerivedData
+
+## Various settings
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+
+## Other
+*.xccheckout
+*.moved-aside
+*.xcuserstate
+*.xcscmblueprint
+
+## Obj-C/Swift specific
+*.hmap
+*.ipa
+
+## Playgrounds
+timeline.xctimeline
+playground.xcworkspace
+
+# Swift Package Manager
+.build/
 /*.xcodeproj
-xcuserdata/
+
+# Carthage
+Carthage/Build
+.UlyssesRoot
+.Ulysses-Settings.plist
+.Ulysses-Group.plist
+
 .idea
+
+# Cocoapod
+Pods/
+!Example/Example.xcodeproj
+Example/Example.xcworkspace
