--- a/Example/Podfile
+++ b/Example/Podfile
@@ -5,5 +5,6 @@ source 'https://github.com/CocoaPods/Specs.git'
 target 'Example' do
   pod 'FaceppSwift', :path => '../'
   pod 'FaceppSwift/UIKit', :path => '../'
+  pod 'SwiftLint'
 
 end
