--- a/cli-showcase/package.json
+++ b/cli-showcase/package.json
@@ -6,6 +6,7 @@
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
+        "@types/express": "^4.17.3",
         "@types/jest": "^25.1.4",
         "@types/node": "^13.9.0",
         "@types/react": "^16.9.23",
@@ -13,6 +14,7 @@
         "antd": "^4.0.2",
         "babel-plugin-import": "^1.13.0",
         "customize-cra": "^0.9.1",
+        "express": "^4.17.1",
         "less": "^3.11.1",
         "less-loader": "^5.0.0",
         "node-sass": "^4.13.1",
@@ -26,7 +28,8 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "server": "ts-node-dev --respawn --transpileOnly ./server/main.ts"
     },
     "eslintConfig": {
         "extends": "react-app"
@@ -53,7 +56,9 @@
         "stylelint-config-rational-order": "^0.1.2",
         "stylelint-config-standard": "^20.0.0",
         "stylelint-declaration-block-no-ignored-properties": "^2.3.0",
-        "stylelint-order": "^4.0.0"
+        "stylelint-order": "^4.0.0",
+        "ts-node": "^8.6.2",
+        "ts-node-dev": "^1.0.0-pre.44"
     },
     "husky": {
         "hooks": {
@@ -62,10 +67,18 @@
     },
     "lint-staged": {
         "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-          "prettier --single-quote --write",
-          "git add"
+            "prettier --single-quote --write",
+            "git add"
+        ],
+        "server/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+            "prettier --single-quote --write",
+            "git add"
         ],
         "src/**/*.css": "stylelint",
         "src/**/*.scss": "stylelint --syntax=scss"
-    }    
+    },
+    "engines": {
+        "node": ">=10.0.0",
+        "npm": ">=6.0.0"
+    }
 }
