--- a/cli-showcase/tsconfig.json
+++ b/cli-showcase/tsconfig.json
@@ -15,11 +15,14 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react"
+    "isolatedModules": false,
+    "noEmit": false,
+    "jsx": "react",
+    "outDir": "./build",
+    "sourceMap": true
   },
   "include": [
-    "src"
+    "./src/**/*",
+    "./server/**/*"
   ]
 }
