ADD：Example 工程增加嵌套 .swiftlint.yml

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -6,5 +6,6 @@ target 'Example' do
   pod 'FaceppSwift', :path => '../'
   pod 'FaceppSwift/UIKit', :path => '../'
   pod 'SwiftLint'
+  pod 'SnapKit', '~> 5.0.0'
 
 end
