ADD: 增加 自定义 WKURLSchemeHandler subspec / 美颜

--- a/Example/Example/Info.plist
+++ b/Example/Example/Info.plist
@@ -2,6 +2,15 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>api_secret</key>
+	<string>AF91LA1BkiN9LdoLxg8Y4-7UhFI2e_oK</string>
+	<key>api_key</key>
+	<string>0mzYFFPb7_UDbp7vZrZYQsTSyeaIZIF9</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
