--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,10 +1,11 @@
-platform :ios, '10.0'
+platform :ios, '11.0'
 use_frameworks!
 source 'https://github.com/CocoaPods/Specs.git'
 
 target 'Example' do
   pod 'FaceppSwift', :path => '../'
   pod 'FaceppSwift/UIKit', :path => '../'
+  pod 'FaceppSwift/SchemeHandler', :path => '../'
   pod 'SwiftLint'
   pod 'SnapKit', '~> 5.0.0'
 
