ADD：人体检测和骨骼关键点检测拦截器 / 图像检测具体实现改为通过代理抛出去

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -5,7 +5,7 @@ source 'https://github.com/CocoaPods/Specs.git'
 target 'Example' do
   pod 'FaceppSwift', :path => '../'
   pod 'FaceppSwift/UIKit', :path => '../'
-  pod 'FaceppSwift/SchemeHandler', :path => '../'
+  pod 'FaceppSwift/WebKit', :path => '../'
   pod 'SwiftLint'
   pod 'SnapKit', '~> 5.0.0'
 
