ADD: 人像抠图拦截器

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -8,6 +8,8 @@ opt_in_rules: # some rules are only opt-in
   # swiftlint rules
 included: # paths to include during linting. `--path` is ignored if present.
   - Sources
+  - UIKit+Facepp
+  - WebKit+Facepp
 excluded: # paths to ignore during linting. Takes precedence over `included`.
   - Tests
   - Scripts
