--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -11,6 +11,7 @@ included: # paths to include during linting. `--path` is ignored if present.
   - Sources
   - UIKit+Facepp
   - WebKit+Facepp
+  - SwiftUI+Facepp
 excluded: # paths to ignore during linting. Takes precedence over `included`.
   - Tests
   - Scripts
