--- a/cli-showcase/tsconfig.json
+++ b/cli-showcase/tsconfig.json
@@ -15,8 +15,8 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": false,
-    "noEmit": false,
+    "isolatedModules": true,
+    "noEmit": true,
     "jsx": "react",
     "outDir": "./build",
     "sourceMap": true
