--- a/Example/Podfile
+++ b/Example/Podfile
@@ -6,6 +6,7 @@ target 'Example' do
   pod 'FaceppSwift', :path => '../'
   pod 'FaceppSwift/UIKit', :path => '../'
   pod 'FaceppSwift/WebKit', :path => '../'
+  pod 'FaceppSwift/ARKit', :path => '../'
   pod 'SwiftLint'
   pod 'SnapKit', '~> 5.0.0'
 
