--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -9,9 +9,10 @@ opt_in_rules: # some rules are only opt-in
   # swiftlint rules
 included: # paths to include during linting. `--path` is ignored if present.
   - Sources
-  - UIKit+Facepp
-  - WebKit+Facepp
-  - SwiftUI+Facepp
+  - Extensions/UIKit+Facepp
+  - Extensions/WebKit+Facepp
+  - Extensions/SwiftUI+Facepp
+  - Extensions/ARKit+Facepp
 excluded: # paths to ignore during linting. Takes precedence over `included`.
   - Tests
   - Scripts
